# textual-invmgr

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data/: db.sqlite
src/: main.py
src/db/: __init__.py  crud.py  database.py  dummy-data.sql  models.py
src/styles/: cart.tcss  index.tcss  login.tcss  past_orders.tcss  search_prod.tcss  ss_mgr.tcss  ss_top.tcss
src/utils/: __init__.py  logger.py  messages.py  pure.py  state.py
src/views/: __init__.py  base_screen.py  modal_checkout.py  modal_dialog.py  modal_prod_detail.py  modal_resize.py  scr_cart.py  scr_login.py  scr_past_orders.py  scr_prod_search.py  scr_sales_manage_product.py  scr_sales_report.py
tests/: test_crud.py
