[project]
name = "invmgr"
version = "1.0.0"
description = "An inventory manager implemented using textual and slqite3."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "pre-commit==4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "textual==6.4.0",
    "textual-dev>=1.8.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # "I" = isort-equivalent
ignore = ["E501", "E722"]
